# VAgyojaka

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Translate.py  about.cpp  about.h  about.ui  alignment.py  audiowaveform.cpp  audiowaveform.h  audiowaveform.ui  check.sh  client.py  convert.qrc  icon.rc  icons.qrc  main.cpp  saveToPDF.py  tool.cpp  tool.h  tool.ui  transcriptgenerator.cpp  transcriptgenerator.h
audioplayer/: audioplayerwidget.cpp  audioplayerwidget.h
config/: settingsmanager.cpp  settingsmanager.h
docs/html/: _r_e_a_d_m_e_8md.html  _translate_8py.html  about_8cpp.html  about_8h.html  about_8h_source.html  addurldialog_8cpp.html  addurldialog_8h.html  addurldialog_8h_source.html  alignment_8py.html  annotated.html  audioplayerwidget_8cpp.html  audioplayerwidget_8h.html  audioplayerwidget_8h_source.html  audiowaveform_8cpp.html  audiowaveform_8h.html  audiowaveform_8h_source.html  blockandword_8h.html  blockandword_8h_source.html  changespeakerdialog_8h.html  changespeakerdialog_8h_source.html  class_about-members.html  class_about.html  class_add_url_dialog-members.html  class_add_url_dialog.html  class_audio_player_delegate-members.html  class_audio_player_delegate.html  class_audio_player_widget-members.html  class_audio_player_widget.html  class_audio_wave_form-members.html  class_audio_wave_form.html  class_change_speaker_dialog-members.html  class_change_speaker_dialog.html  class_combo_box_delegate-members.html  class_combo_box_delegate.html  class_commit_dialog-members.html  class_commit_dialog.html  class_credentials_dialog-members.html  class_credentials_dialog.html  class_editor-members.html  class_editor.html  (+238 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  defines_0.js  defines_1.js  (+79 more)
editor/: blockandword.h  editor.cpp  editor.h  texteditor.cpp  texteditor.h  wordlists.qrc
editor/utilities/: changespeakerdialog.h  equationeditor.cpp  equationeditor.h  equationeditor.ui  findreplacedialog.cpp  findreplacedialog.h  keyboardshortcutguide.cpp  taglistdisplaywidget.cpp  tagselectiondialog.cpp  tagselectiondialog.h  timepropagationdialog.h
editor/wordlists/: english.txt  hindi.txt  marathi.txt  telugu.txt
git/: addurldialog.cpp  addurldialog.h  commitdialog.cpp  commitdialog.h  credentialsdialog.cpp  credentialsdialog.h  git.cpp  git.h  git.ui  git_util.h  remotenamedialog.cpp  remotenamedialog.h
mediaplayer/: fftw3.h  mediaplayer.cpp  mediaplayer.cpp.orig  mediaplayer.cpp.rej  mediaplayer.h  playercontrols.cpp  playercontrols.h  qcustomplot.cpp  qcustomplot.h  videowidget.cpp  videowidget.h
mediaplayer/utilities/: mediasplitter.cpp  mediasplitter.h
tts/: customdelegates.cpp  customdelegates.h  lazyloadingmodel.cpp  lazyloadingmodel.h  ttsannotator.cpp  ttsannotator.h  ttsannotator.ui  ttsrow.h
